added terminal theme

--- a/symlinks_to/vscode/settings.json
+++ b/symlinks_to/vscode/settings.json
@@ -145,9 +145,9 @@
         // vim-airline feature of VIM EXTENSION!!!
     "workbench.colorCustomizations": {
         "editorRuler.foreground": "#ff4081",
-        "statusBar.background": "#005f5f",
-        "statusBar.noFolderBackground": "#005f5f",
-        "statusBar.debuggingBackground": "#005f5f",
+        "statusBar.background": "#007acc",
+        "statusBar.noFolderBackground": "#007acc",
+        "statusBar.debuggingBackground": "#007acc",
         "statusBar.foreground": "#ffffff",
         "statusBar.debuggingForeground": "#ffffff"
     },
@@ -167,6 +167,7 @@
     "cSpell.userWords": [
         "colname",
         "colnames",
-        "dotenv"
+        "dotenv",
+        "Monokai"
     ]
 }
