--- a/symlinks_to/vscode/settings.json
+++ b/symlinks_to/vscode/settings.json
@@ -5,8 +5,9 @@
     "interactiveWindow.executeWithShiftEnter": true,
 
     //workbench
-    "workbench.startupEditor": "none",
     "workbench.colorTheme": "Monokai",
+    "workbench.iconTheme": "material-icon-theme",
+    "workbench.startupEditor": "none",
     "workbench.tree.enableStickyScroll": true,
         // changes and save
     "workbench.editor.highlightModifiedTabs": true,
@@ -16,15 +17,28 @@
     "workbench.editorAssociations": {
         "file:/**/*.csv": "jupyter-data-wrangler"
     },
+    "workbench.editor.showTabIndex": true,
+
+    // material icon theme
+    "material-icon-theme.opacity": 0.75,
+    "material-icon-theme.saturation": 0.85,
+    "material-icon-theme.folders.theme": "specific",
+
 
     // Files
     "files.autoSave": "afterDelay",
     "files.insertFinalNewline": true,
     "files.eol": "\n",
 
+    //explorer
+    "explorer.expandSingleFolderWorkspaces": false,
+    "explorer.compactFolders": false,
+
     // Editor
     "editor.tabSize": 4,
-    "editor.fontFamily": "MesloLGS NF",
+    "editor.fontFamily": "Fira Code",
+    "editor.fontLigatures": false,
+    "editor.fontWeight": "450",
     "editor.minimap.enabled": true,
     "editor.wordWrap": "on",
     "editor.lineNumbers": "relative",
@@ -45,7 +59,7 @@
     "diffEditor.ignoreTrimWhitespace": false,
 
     // Terminal
-    "terminal.integrated.tabs.enabled": true,
+    "terminal.integrated.tabs.enabled": false,
     "terminal.integrated.fontFamily": "MesloLGS NF",
     "terminal.integrated.cursorStyle": "block",
     "terminal.integrated.cursorBlinking": true,
@@ -106,7 +120,7 @@
     "python.terminal.activateEnvironment": false,
     "python.terminal.activateEnvInCurrentTerminal": false,
 
-    // Notebook
+    //Notebook
     "notebook.stickyScroll.enabled": true,
     "notebook.lineNumbers": "on",
     "notebook.output.textLineLimit": 100,
@@ -126,7 +140,10 @@
         // Basics
     "vim.smartRelativeLine": true,
     "vim.hlsearch": true,
+    "vim.incsearch": true,
     "vim.highlightedyank.enable": true,
+    "vim.leader": "<space>",
+    "vim.handleKeys": {"<space>": true},
 
         // keybinding
     "vim.normalModeKeyBindings": [
@@ -137,6 +154,12 @@
             ]
         }
     ],
+    "vim.normalModeKeyBindingsNonRecursive": [
+        {
+            "before": ["<space>", "<space>"],
+            "after": ["<leader>", "<leader>"]
+        }
+    ],
 
         // Plugins
     "vim.easymotion": true,
@@ -145,14 +168,15 @@
         // vim-airline feature of VIM EXTENSION!!!
     "workbench.colorCustomizations": {
         "editorRuler.foreground": "#ff4081",
-        "statusBar.background": "#007acc",
-        "statusBar.noFolderBackground": "#007acc",
-        "statusBar.debuggingBackground": "#007acc",
+        "statusBar.background": "#005f5f",
+        "statusBar.noFolderBackground": "#005f5f",
+        "statusBar.debuggingBackground": "#005f5f",
         "statusBar.foreground": "#ffffff",
         "statusBar.debuggingForeground": "#ffffff"
     },
     "vim.surround": true,
     "vim.camelCaseMotion.enable": true,
+    "extensions.experimental.affinity": {"vscodevim.vim": 1},
 
     // error lens
     "errorLens.enabledDiagnosticLevels": [
@@ -165,9 +189,31 @@
 
     // Spell Checker
     "cSpell.userWords": [
+        "Analyser",
+        "blackbox",
+        "bordercolor",
+        "borderwidth",
         "colname",
         "colnames",
         "dotenv",
-        "Monokai"
-    ]
+        "dtutils",
+        "Fira",
+        "ipynb",
+        "lightcoral",
+        "linecolor",
+        "localtools",
+        "Monokai",
+        "mypy",
+        "plotlyjs",
+        "pycache",
+        "qstring",
+        "showline",
+        "venv",
+        "xaxis",
+        "yaxis"
+    ],
+    "terminal.integrated.tabs.location": "left",
+    "docker.extension.enableComposeLanguageServer": false,
+    "scm.compactFolders": false,
+    "claudeCode.preferredLocation": "panel"
 }
