--- a/setup_scripts/macos/Brewfile
+++ b/setup_scripts/macos/Brewfile
@@ -14,23 +14,25 @@ brew "fastfetch"        # neofetch replacement
 brew "fzf"              # fuzzy finder
 
 # Development tools
-brew "rust"
 brew "uv"               # Python package installer
 brew "ruff"             # Python linter
 brew "direnv"           # Environment variable management
 brew "tmux"             # Terminal multiplexer
+brew "rust"
 
 # neovim related
 brew "neovim"           # Text editor
 brew "lazygit"          # mainly for lazyvim
 brew "tree-sitter-cli"  # mainly for lazyvim
 
+# Fonts
+cask "font-fira-mono-nerd-font"
+
 # Applications
 cask "google-chrome"
 cask "visual-studio-code"
 cask "deepl"
 cask "grammarly-desktop"
-cask "font-fira-mono-nerd-font"
 cask "claude-code"
 cask "docker-desktop"
 # cask "chatgpt" switch to just use atlas
