--- a/symlinks_to/vscode/settings.json
+++ b/symlinks_to/vscode/settings.json
@@ -100,6 +100,7 @@
             ]
         }
     },
+    "terminal.integrated.suggest.enabled": false
     // git
     "git.autofetch": true,
     "git.untrackedChanges": "separate",
